--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@tailwindcss/typography": "^0.5.16",
     "html-react-parser": "^5.2.10",
     "minecraft-server-util": "^5.4.4",
-    "next": "15.3.5",
+    "next": "^16.0.8",
     "next-themes": "^0.4.6",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-markdown": "^10.1.0",
     "rehype-slug": "^6.0.0",
     "rehype-stringify": "^10.0.1",
